# nova

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  codecov.yaml
conan/: conanfile.py
config/: default.json
editor/: Application.cpp  Application.hh  CMakeLists.txt  main.cpp
editor/src/: Application.cpp  Application.hh  Cameras.cpp  Cameras.hh  Console.cpp  Console.hh  Events.hh  Resources.cpp  Resources.hh  main.cpp
editor/src/ui/: UserInterface.cpp  UserInterface.hh
editor/src/ui/views/: InspectorView.cpp  InspectorView.hh  PropertiesView.cpp  PropertiesView.hh  ResourcesView.cpp  ResourcesView.hh  SceneView.cpp  SceneView.hh
editor/src/ui/views/components/: ComponentUI.hh  DirectionalLightUI.cpp  DirectionalLightUI.hh  MeshCompositeUI.cpp  MeshCompositeUI.hh  PointLightUI.cpp  PointLightUI.hh
editor/src/ui/views/resources/: MaterialUI.cpp  MaterialUI.hh  TextureUI.cpp  TextureUI.hh
editor/src/utils/: ProgramOptions.cpp  ProgramOptions.hh
editor/ui/: Console.cpp  Console.hh  Core.cpp  Core.hh  EntityInspectorPanel.cpp  EntityInspectorPanel.hh  ResourceInspectorPanel.cpp  ResourceInspectorPanel.hh  ResourcesPanel.cpp  ResourcesPanel.hh  ScenePanel.cpp  ScenePanel.hh  UI.cpp  UI.hh
engine/bench/: CMakeLists.txt
engine/bench/core/: StableVector.Benchmark.cpp
engine/src/starlight/: CMakeLists.txt
engine/src/starlight/app/: CMakeLists.txt  Engine.cpp  Engine.hh
engine/src/starlight/app/factories/: MaterialFactory.cpp  MaterialFactory.hh  MeshFactory.cpp  MeshFactory.hh  ShaderFactory.cpp  ShaderFactory.hh  SkyboxFactory.cpp  SkyboxFactory.hh  TextureFactory.cpp  TextureFactory.hh
engine/src/starlight/app/renderPasses/: GridRenderPass.cpp  LightsDebugRenderView.cpp  LightsDebugRenderView.hh  ShadowMapsRenderPass.cpp  ShadowMapsRenderPass.hh  SkyboxRenderPass.cpp  WorldRenderPass.cpp
engine/src/starlight/app/scene/: Scene.cpp  Scene.hh
engine/src/starlight/app/utils/: SPIRVParser.cpp  SPIRVParser.hh
engine/src/starlight/core/: Algorithms.hh  CMakeLists.txt  Clock.cpp  Clock.hh  Concepts.hh  Config.cpp  Config.hh  Context.cpp  Context.hh  Core.hh  Factory.hh  FileSystem.cpp  FileSystem.hh  Function.hh  Globals.cpp  Globals.hh  Id.hh  Json.cpp  Json.hh  LazyEvaluator.hh  Log.cpp  Log.hh  Macros.hh  Resource.hh  Scope.hh  Singleton.hh  TaskQueue.cpp  TaskQueue.hh  Time.cpp  Time.hh  Utils.cpp  Utils.hh
engine/src/starlight/core/containers/: FlatMap.hh  KeyVector.hh  StableVector.hh  StaticVector.hh
engine/src/starlight/core/event/: Core.hh  EventBroker.cpp  EventHandlerSentinel.hh  EventProxy.cpp  EventProxy.hh  Events.hh  Input.hh  WindowResized.hh
engine/src/starlight/core/math/: Core.hh  Geometry.cpp  Glm.cpp  Glm.hh  Rect.hh  Utils.hh  Vec.cpp  Vec.hh  Vertex.cpp  Vertex.hh
engine/src/starlight/core/memory/: Allocator.hh  DynamicAllocator.cpp  DynamicAllocator.hh  LocalPointer.hh  LocalPtr.hh  Mallocator.hh  Memory.hh  SharedPointer.hh  SharedPtr.hh  UniquePointer.hh  UniquePtr.hh
engine/src/starlight/core/utils/: Enum.hh  FreeList.cpp  FreeList.hh  Json.hh  Resource.hh  StableVector.hh
engine/src/starlight/core/window/: Input.cpp  Input.hh  Window.cpp  Window.hh
engine/src/starlight/event/: CMakeLists.txt  Core.hh  EventHandlerSentinel.cpp  EventProxy.cpp  EventProxy.hh  fwd.hh
engine/src/starlight/renderer/: CMakeLists.txt  Core.cpp  Core.hh  Material.cpp  Material.hh  Mesh.cpp  Mesh.hh  MeshComposite.cpp  MeshComposite.hh  RenderGraph.cpp  RenderGraph.hh  RenderMode.hh  RenderPacket.hh  RenderPass.cpp  RenderPass.hh  Renderer.cpp  Renderer.hh  RendererFrontend.cpp  RendererFrontend.hh  Skybox.cpp  Skybox.hh  fwd.hh
engine/src/starlight/renderer/camera/: Camera.cpp  Camera.hh  EulerCamera.cpp  EulerCamera.hh  FirstPersonCamera.cpp  FirstPersonCamera.hh
engine/src/starlight/renderer/factories/: MaterialFactory.cpp  MaterialFactory.hh  MeshFactory.cpp  MeshFactory.hh  ShaderFactory.cpp  ShaderFactory.hh  ShaderProgramFactory.cpp  ShaderProgramFactory.hh  SkyboxFactory.cpp  SkyboxFactory.hh  TextureFactory.cpp  TextureFactory.hh
engine/src/starlight/renderer/gpu/: Buffer.cpp  Buffer.hh  CommandBuffer.cpp  CommandBuffer.hh  Commands.hh  Device.cpp  Device.hh  Mesh.cpp  Mesh.hh  Pipeline.cpp  Pipeline.hh  Queue.hh  RenderPass.cpp  RenderPass.hh  RenderPassBackend.cpp  RenderPassBackend.hh  RenderTarget.hh  RendererBackend.hh  Shader.cpp  Shader.hh  ShaderDataBinder.cpp  ShaderDataBinder.hh  ShaderProgram.cpp  ShaderProgram.hh  Swapchain.cpp  Swapchain.hh  Sync.cpp  Sync.hh  Texture.cpp  Texture.hh  UIRenderer.cpp  UIRenderer.hh  fwd.hh
engine/src/starlight/renderer/light/: DirectionalLight.cpp  DirectionalLight.hh  PointLight.cpp  PointLight.hh
engine/src/starlight/renderer/passes/: DummyRenderPass.cpp  DummyRenderPass.hh  GridRenderPass.cpp  GridRenderPass.hh  LightsDebugRenderView.cpp  ShadowMapsRenderPass.cpp  ShadowMapsRenderPass.hh  SkyboxRenderPass.cpp  SkyboxRenderPass.hh  UIRenderPass.cpp  UIRenderPass.hh  WorldRenderPass.cpp  WorldRenderPass.hh
engine/src/starlight/renderer/views/: GridRenderView.cpp  GridRenderView.hh  LightsDebugRenderView.cpp  LightsDebugRenderView.hh  RenderView.cpp  RenderView.hh  ShadowMapsRenderView.cpp  ShadowMapsRenderView.hh  SkyboxRenderView.cpp  SkyboxRenderView.hh  UIRenderView.cpp  UIRenderView.hh  WorldRenderView.cpp  WorldRenderView.hh
engine/src/starlight/scene/: CMakeLists.txt  Entity.cpp  Entity.hh  Scene.cpp  Scene.hh
engine/src/starlight/scene/ecs/: ComponentContainer.hh  ComponentManager.hh  Entity.cpp  Entity.hh
engine/src/starlight/scene/parsing/: ComponentDeserializer.hh  ComponentSerializer.hh  SceneDeserializer.cpp  SceneDeserializer.hh  SceneParser.cpp  SceneParser.hh  SceneSerializer.cpp  SceneSerializer.hh
engine/src/starlight/ui/: CMakeLists.txt  Utils.cpp  Utils.hh
engine/src/starlight/ui/widgets/: Image.cpp  Menu.cpp  Panel.cpp  Panel.hh
engine/src/starlight/window/: CMakeLists.txt  Events.hh  Input.cpp  Input.hh  Window.cpp  Window.hh
engine/src/starlight/window/glfw/: GLFWWindow.cpp  GLFWWindow.hh  Vulkan.cpp
(+136 files in other folders)
