find_package(VulkanLoader REQUIRED)
find_package(VulkanHeaders REQUIRED)
find_package(glfw3 REQUIRED)
find_package(spdlog REQUIRED)
find_package(fmt REQUIRED)
find_package(nlohmann_json REQUIRED)
find_package(glm REQUIRED)
find_package(SPIRV-Cross REQUIRED)

add_subdirectory(core)
add_subdirectory(event)
add_subdirectory(window)
add_subdirectory(renderer)
add_subdirectory(scene)
add_subdirectory(ui)
add_subdirectory(app)
